--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-PLease use wiki page in order know how to use "Behat Test Automation Framework"
+PLease use wiki page in order know how to use this tool.
 
 https://github.com/Shashi-ibuildings/Behat/wiki/Acceptance-Testing-for-PHP
 
